WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72345
[chromium] Fix the build after moving some arrays to WTF
https://bugs.webkit.org/show_bug.cgi?id=72345
Summary
[chromium] Fix the build after moving some arrays to WTF
Julien Chaffraix
Reported
2011-11-14 19:06:01 PST
I discussed the fix with Dirk and it looks like it is minimal and should not impact our public API. Attaching the change here, FYI Darin.
Attachments
Proposed build fix.
(1.84 KB, patch)
2011-11-14 19:07 PST
,
Julien Chaffraix
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Chaffraix
Comment 1
2011-11-14 19:07:48 PST
Created
attachment 115085
[details]
Proposed build fix.
Julien Chaffraix
Comment 2
2011-11-14 19:15:01 PST
Landed in
http://trac.webkit.org/changeset/100234
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug