[chromium] Fix the build after moving some arrays to WTF https://bugs.webkit.org/show_bug.cgi?id=72345

Reviewed by Dirk Pranke.

* public/WebArrayBufferView.h: s/WebCore/WTF/g.


Canonical link: https://commits.webkit.org/88782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100234 268f45cc-cd09-0410-ab3c-d52691b4dbfc